Wrapped card-front into a block to fix transition
Originally, if you move the cursor horizontally from one block to another in the bottom part of the blocks, flipping not going smothly because the card-front block sliding under the cursor while animation happening. Wrapping this block into another block with propety overflow: hidden helped to resolve the issue.

--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,11 @@ body {
     height: 100%;
     position: absolute;
     width: 100%; }
+  .content .card-front-wrapper {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    position: absolute;  }
   .content .card-front {
     -webkit-transform: perspective(1000) rotateX(0);
     -moz-transform: perspective(1000) rotateX(0);
